--- a/WEB(BE)/package.json
+++ b/WEB(BE)/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "child_process": "^1.0.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
@@ -21,6 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "node-mysql": "^0.4.2",
+    "python-shell": "^3.0.1",
     "router": "^1.3.7",
     "supervisor": "^0.12.0"
   }
