--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,19 @@
-version: "3"
+version: '3'
 services:
-  db:
-    container_name: db
-    build: ./WEB(BE)/database/
-    ports:
-      - "3306:3306"
+  database:
+    container_name: database
+    build: ./db
+    expose:
+      - 3306
     environment:
-      MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
-      MYSQL_DATABASE: "miliroutine_db"
-    command:
-      - --character-set-server=utf8mb4
-      - --collation-server=utf8mb4_unicode_ci
+      MYSQL_ROOT_PASSWORD: '2022MySQL!@'
+      MYSQL_DATABASE: 'miliroutine_db'
   frontend:
     container_name: frontend
     build: ./WEB(FE)
     volumes:
-      - "./WEB(FE)/:/app"
-      - "/app/node_modules"
+      - './WEB(FE)/:/app'
+      - '/app/node_modules'
     expose:
       - 5173
     networks:
@@ -24,23 +21,40 @@ services:
   backend:
     container_name: backend
     build: ./WEB(BE)
-    restart: "on-failure"
+    restart: 'on-failure'
+    ports:
+      - '3000:3000'
     expose:
       - 3000
     volumes:
-      - "./WEB(BE):/backend"
-      - "/WEB(BE)/node_modules"
+      - './WEB(BE):/app'
+      - '/WEB(BE)/node_modules'
     stdin_open: true
     tty: true
+    depends_on:
+      - database
+  ai:
+    container_name: ai
+    build: ./AI
+    ports:
+      - '4000:4000'
+    expose:
+      - 4000
+    volumes:
+      - './AI:/app'
+      - '/AI/requirements.txt'
   nginx:
     container_name: nginx
     image: nginx:latest
-    restart: "on-failure"
+    restart: 'on-failure'
     ports:
-      - 80:80
+      - '80:80'
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./WEB(FE)/dist:/usr/share/nginx/html
+    depends_on:
+      - frontend
+      - backend
 
 networks:
   miliroutine:
