--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,7 +10,7 @@ http {
     default_type  application/octet-stream;
     
     upstream docker-server {
-        server server:3000;
+        server localhost:3000;
     }
     
     server {
