--- a/WEB(BE)/Dockerfile
+++ b/WEB(BE)/Dockerfile
@@ -4,6 +4,6 @@ WORKDIR /app
 ENV PATH /app/node_modules/.bin:$PATH
 COPY package.json .
 
-RUN npm install --no-cache
+RUN npm install
 
 CMD ["npm", "start"]
