--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - 3000
     volumes:
       - './WEB(BE):/app'
-      - '/WEB(BE)/node_modules'
+      - '/app/node_modules'
     stdin_open: true
     tty: true
     depends_on:
@@ -42,7 +42,6 @@ services:
       - 4000
     volumes:
       - './AI:/app'
-      - '/AI/requirements.txt'
   nginx:
     container_name: nginx
     image: nginx:latest
