--- a/AI/requirements.txt
+++ b/AI/requirements.txt
@@ -2,7 +2,7 @@ certifi==2019.11.28
 chardet==3.0.4
 cleantext==1.1.4
 click==8.1.3
-dbus-python==1.2.16
+# dbus-python==1.2.16
 emoji==1.7.0
 gensim==3.8.3
 Flask==2.2.2
@@ -14,9 +14,9 @@ lxml==4.9.1
 nltk==3.7
 numpy==1.23.4
 Pygments==2.3.1
-PyGObject==3.36.0
+# PyGObject==3.36.0
 PyMySQL==1.0.2
-python-apt==2.0.0+ubuntu0.20.4.8
+# python-apt==2.0.0+ubuntu0.20.4.8
 PyYAML==5.3.1
 regex==2022.9.13
 requests==2.22.0
@@ -24,7 +24,7 @@ requests-unixsocket==0.2.0
 scipy==1.9.2
 six==1.14.0
 smart-open==6.2.0
-torch==1.12.1
+# torch==1.12.1 용량이 너무 커서 docker가 꺼짐
 tqdm==4.64.1
 typing_extensions==4.4.0
 urllib3==1.25.8
