HOTFIX: Nginx와 Vite 각각 Proxy 이용하여 CORS 해결

--- a/WEB(FE)/package.json
+++ b/WEB(FE)/package.json
@@ -8,6 +8,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
+  "proxy": "https://yoopark-solid-space-goggles-q4jxvv74647fx7jj-8080.preview.app.github.dev",
   "dependencies": {
     "@craco/craco": "^6.4.5",
     "@headlessui/react": "^1.7.3",
