--- a/AI/requirements.txt
+++ b/AI/requirements.txt
@@ -24,7 +24,7 @@ requests-unixsocket==0.2.0
 scipy==1.9.2
 six==1.14.0
 smart-open==6.2.0
-# torch==1.12.1 용량이 너무 커서 docker가 꺼짐
+torch==1.12.1
 tqdm==4.64.1
 typing_extensions==4.4.0
 urllib3==1.25.8
